chore: format code using google formatter